--- a/app/src/main/res/layout/user_profile_detail.xml
+++ b/app/src/main/res/layout/user_profile_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,35 +9,27 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="305dp"
+        android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView_avatar"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/textView_github_url"
         android:layout_weight="0.90" />
 
     <TextView
-        android:text="login"
+        tools:text="login"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/textView_login"
         android:textSize="18sp"
         android:textColor="@android:color/white" />
 
     <TextView
-        android:text="github url"
+        tools:text="github url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:id="@+id/textView_github_url"
-        android:layout_below="@+id/textView_login"
-        android:layout_centerHorizontal="true"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textColor="@android:color/white" />
 
     <android.support.design.widget.FloatingActionButton
