--- a/app/src/main/res/layout/content_users.xml
+++ b/app/src/main/res/layout/content_users.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.activity.UserActivity">
+    tools:context=".activity.activity.UsersActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/card_recycler_view"
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"/>
 
     <ProgressBar
-        style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
