--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.codegod.alctrack.activity.activity.UsersActivity">
+    tools:context="com.codegod.alctrack.activity.UsersActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
